翻译主题中的一些文字为中文

--- a/pelican/themes/notmyidea/templates/analytics.html
+++ b/pelican/themes/notmyidea/templates/analytics.html
@@ -9,7 +9,15 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+
+
 {% endif %}
+
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb97d53520cd964fffdada4eaa3da2710' type='text/javascript'%3E%3C/script%3E"));
+</script>
+
 {% if GAUGES %}
     <script type="text/javascript">
     var _gauges = _gauges || [];
